[gd_scene load_steps=18 format=3 uid="uid://xgtj31bfsb5f"]

[ext_resource type="Script" uid="uid://dvgnmam8qvi68" path="res://projectlies/shaman_projectile.gd" id="1_2aatf"]
[ext_resource type="Texture2D" uid="uid://bvg5gbf4qclg8" path="res://assets/enemy/Shaman/Shaman_Explosion.png" id="1_lxipa"]
[ext_resource type="Texture2D" uid="uid://pjjb0t2q651v" path="res://assets/enemy/Shaman/Shaman_Projectile.png" id="2_2aatf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lxipa"]
radius = 23.5
height = 74.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5wicq"]
atlas = ExtResource("1_lxipa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uro72"]
atlas = ExtResource("1_lxipa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r01u6"]
atlas = ExtResource("1_lxipa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3apac"]
atlas = ExtResource("1_lxipa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wjua"]
atlas = ExtResource("1_lxipa")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wla15"]
atlas = ExtResource("1_lxipa")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0325"]
atlas = ExtResource("1_lxipa")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpw34"]
atlas = ExtResource("1_lxipa")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f8tc"]
atlas = ExtResource("1_lxipa")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eeoy"]
atlas = ExtResource("2_2aatf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhw5p"]
atlas = ExtResource("2_2aatf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdjmo"]
atlas = ExtResource("2_2aatf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_lk3vs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wicq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uro72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r01u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3apac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wjua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wla15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0325")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpw34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f8tc")
}],
"loop": false,
"name": &"Explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eeoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhw5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eeoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhw5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eeoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhw5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eeoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhw5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdjmo")
}],
"loop": false,
"name": &"Projectile",
"speed": 10.0
}]

[node name="ShamanProjectile" type="Area2D"]
script = ExtResource("1_2aatf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -7)
rotation = 1.5707964
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_lxipa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_lk3vs")
animation = &"Explosion"
frame = 2
offset = Vector2(0, -10)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
